Adicionando botão entrar e finalizando xml da view de login

--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -31,4 +31,12 @@
 	    <requestFocus />
 	</EditText>
 	
+	<Button 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_gravity="bottom"
+	    android:onClick="login"
+	    android:text="@string/login"
+	    />
+	
 </LinearLayout>
