--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -11,7 +11,7 @@
         android:text="@string/username"
         />
 	<EditText 
-	    android:id="@+id/user"
+	    android:id="@+id/username"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:inputType="text">
