--- a/res/layout/spent.xml
+++ b/res/layout/spent.xml
@@ -26,6 +26,17 @@
 			android:textAppearance="?android:attr/textAppearanceLarge"
 			android:textStyle="bold" />
         
+        <TextView 
+            android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/category" />
+        
+        <Spinner 
+            android:id="@+id/category"
+            android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:prompt="@string/category"
+            />
         
         <TableLayout
             android:layout_width="match_parent"
