--- a/res/menu/dashboard_menu.xml
+++ b/res/menu/dashboard_menu.xml
@@ -3,6 +3,5 @@
     <item
         android:id="@+id/exit"
         android:icon="@android:drawable/ic_menu_close_clear_cancel"
-        android:title="@string/exit">
-    </item>
+        android:title="@string/exit" />
 </menu>
