--- a/res/layout/list_travel.xml
+++ b/res/layout/list_travel.xml
@@ -36,5 +36,12 @@
             android:id="@+id/value"
             android:layout_width="wrap_content"
         	android:layout_height="wrap_content" />
+        
+        <ProgressBar 
+            android:id="@+id/valuesProgressBar"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			style="?android:attr/progressBarStyleHorizontal" />
+			        
     </LinearLayout>
 </LinearLayout>
