--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -3,13 +3,13 @@
     
     <PreferenceCategory android:title="@string/preferences">        
         <CheckBoxPreference
-            android:key="travel_mode"
+            android:key="travelMode"
             android:summary="@string/travel_mode_summary"
             android:title="@string/travel_mode" />
         
         <EditTextPreference 
             android:dialogTitle="@string/limit_value"
-            android:key="limit_value"
+            android:key="limitValue"
             android:defaultValue="80"
             android:summary="@string/limit_value_summary"
             android:title="@string/limit_value" />
