--- a/res/layout/dashboard.xml
+++ b/res/layout/dashboard.xml
@@ -11,17 +11,15 @@
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:text="@string/app_name"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        />
+        android:textAppearance="?android:attr/textAppearanceLarge" />
     
     <RelativeLayout 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#015488"
-        >
+        android:background="#015488" >
         
         <TextView
-            android:id="@+id/new_spent"
+            android:id="@+id/newSpent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
@@ -33,11 +31,11 @@
             android:textStyle="bold" />
         
         <TextView
-            android:id="@+id/new_travel"
+            android:id="@+id/newTravel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_alignTop="@id/new_spent"
+            android:layout_alignTop="@id/newSpent"
             android:layout_marginRight="50dp"
             android:clickable="true"
             android:onClick="selectOption"
@@ -46,10 +44,10 @@
             android:textStyle="bold" />
         
         <TextView
-            android:id="@+id/my_travels"
+            android:id="@+id/myTravels"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/new_spent"
+            android:layout_alignLeft="@id/newSpent"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="120dp"
             android:clickable="true"
@@ -62,8 +60,8 @@
             android:id="@+id/configurations"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/my_travels"
-            android:layout_alignRight="@id/new_travel"
+            android:layout_alignBottom="@id/myTravels"
+            android:layout_alignRight="@id/newTravel"
             android:clickable="true"
             android:onClick="selectOption"
             android:text="@string/configurations"
