--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -8,8 +8,7 @@
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/username"
-        />
+        android:text="@string/username" />
 	<EditText 
 	    android:id="@+id/username"
 	    android:layout_width="match_parent"
@@ -21,13 +20,12 @@
 	<TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/password"
-        />
+        android:text="@string/password" />
 	<EditText 
 	    android:id="@+id/password"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:inputType="textPassword">
+	    android:inputType="textPassword" >
 	    <requestFocus />
 	</EditText>
 	
