--- a/res/menu/travel_menu.xml
+++ b/res/menu/travel_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/new_spent"
+        android:id="@+id/newSpent"
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/new_spent" />
         
